--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <form action="">
         <textarea name="prompt" id="" cols="1" rows="1" placeholder="Ask Lumina..."></textarea>
         <button type="submit">
-          <img src="assets/send.svg" alt="">
+          <img src="./assets/send.svg" alt="">
         </button>
       </form>
     </div>
