--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <div class="header">
         <center>
-          <h1>Lumina Ai</h1>
+          <h1>Lumina Ai 1</h1>
           <h2>HCI FINAL PROJECT</h2>
           <H3>ESTILO, TIMTIMAN, KALINGA</H3>
         </center>
