changed lala mo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <div id="app">
       <div class="header">
         <center>
-          <h1>Lumina Ai GUMANA KANA PLS LALA MO</h1>
+          <h1>Lumina A.I</h1>
           <h2>HCI FINAL PROJECT</h2>
-          <H3>ESTILO, TIMTIMAN, KALINGA</H3>
         </center>
       </div>
       <div id="chat_container"></div>  
